--- a/.gitignore
+++ b/.gitignore
@@ -104,5 +104,5 @@ venv.bak/
 .mypy_cache/
 
 #other
-.vscode/
-python/Discord Understanding/personal/
+*.vscode/
+apps/Discord Understanding/personal/
